# hscla_tool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: hscla_db.yaml
docs/: ARCHIVE_LAYOUT.md  SPEC.md  USAGE.md  lessons.md  todo.md
example/perseus/: README.md  build_la2020_sql.py  step1_coverage.py  step2_archive_fetch.py  step2_archive_merge.py  step2_catalog.py
example/perseus/notes/: step1_coverage.md  step1_frame_counts.csv  step1_patches.csv
example/perseus/sql/: columns_la2020.yaml  la2020_forced.sql.tmpl  la2020_forced_aper.sql.tmpl  la2020_forced_conv.sql.tmpl  la2020_forced_flux.sql.tmpl  la2020_forced_other.sql.tmpl  la2020_forced_undeb_aper.sql.tmpl  la2020_forced_undeb_conv.sql.tmpl  la2020_meas.sql.tmpl  la2020_meas_cmodel.sql.tmpl  la2020_meas_other.sql.tmpl  missing_in_la2020.txt  sandbox_provenance.yaml
hscla_tool/: __init__.py  archive.py  background.py  cli.py  config.py  coverage.py  crossmatch.py  cutout.py  db.py  mask.py  mirror.py  psf.py  sql.py
tests/: test_archive.py  test_background.py  test_cli.py  test_config.py  test_coverage.py  test_crossmatch.py  test_cutout.py  test_db.py  test_mask.py  test_mirror.py  test_psf.py  test_sql.py
