[project]
name = "hscla_tool"
version = "0.0.1"
description = "Knowledge base and Python toolkit for the HSC Legacy Archive (HSCLA2020)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Song Huang", email = "dr.guangtou@gmail.com" }]
dependencies = [
    "astropy>=7.0",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "scipy>=1.13",
    "tqdm>=4.66",
]

[project.scripts]
hscla = "hscla_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hscla_tool"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
